--- a/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
@@ -1283,9 +1283,26 @@ spec:
               description: Desired configuration of Eclipse Che installation.
               properties:
                 components:
+                  default:
+                    cheServer:
+                      debug: false
+                      logLevel: INFO
+                    database:
+                      credentialsSecretName: postgres-credentials
+                      externalDb: false
+                      postgresDb: dbche
+                      postgresHostName: postgres
+                      postgresPort: "5432"
+                      pvc:
+                        claimSize: 1Gi
+                    metrics:
+                      enable: true
                   description: Che components configuration.
                   properties:
                     cheServer:
+                      default:
+                        debug: false
+                        logLevel: INFO
                       description: General configuration settings related to the Che
                         server.
                       properties:
@@ -1301,6 +1318,7 @@ spec:
                             type: string
                           type: array
                         debug:
+                          default: false
                           description: Enables the debug mode for Che server.
                           type: boolean
                         deployment:
@@ -1320,6 +1338,10 @@ spec:
                                     description: Image pull policy. Default value
                                       is `Always` for `nightly`, `next` or `latest`
                                       images, and `IfNotPresent` in other cases.
+                                    enum:
+                                      - Always
+                                      - IfNotPresent
+                                      - Never
                                     type: string
                                   name:
                                     description: Container name.
@@ -1466,6 +1488,10 @@ spec:
                                     description: Image pull policy. Default value
                                       is `Always` for `nightly`, `next` or `latest`
                                       images, and `IfNotPresent` in other cases.
+                                    enum:
+                                      - Always
+                                      - IfNotPresent
+                                      - Never
                                     type: string
                                   name:
                                     description: Container name.
@@ -1547,6 +1573,14 @@ spec:
                           type: object
                       type: object
                     database:
+                      default:
+                        credentialsSecretName: postgres-credentials
+                        externalDb: false
+                        postgresDb: dbche
+                        postgresHostName: postgres
+                        postgresPort: "5432"
+                        pvc:
+                          claimSize: 1Gi
                       description: Configuration settings related to the database
                         used by the Che installation.
                       properties:
@@ -1574,6 +1608,10 @@ spec:
                                     description: Image pull policy. Default value
                                       is `Always` for `nightly`, `next` or `latest`
                                       images, and `IfNotPresent` in other cases.
+                                    enum:
+                                      - Always
+                                      - IfNotPresent
+                                      - Never
                                     type: string
                                   name:
                                     description: Container name.
@@ -1644,6 +1682,7 @@ spec:
                               type: object
                           type: object
                         externalDb:
+                          default: false
                           description: Instructs the Operator to deploy a dedicated
                             database. By default, a dedicated PostgreSQL database
                             is deployed as part of the Che installation. When `externalDb`
@@ -1669,6 +1708,8 @@ spec:
                             See field `externalDb`.
                           type: string
                         pvc:
+                          default:
+                            claimSize: 1Gi
                           description: PVC settings for PostgreSQL database.
                           properties:
                             claimSize:
@@ -1703,6 +1744,10 @@ spec:
                                     description: Image pull policy. Default value
                                       is `Always` for `nightly`, `next` or `latest`
                                       images, and `IfNotPresent` in other cases.
+                                    enum:
+                                      - Always
+                                      - IfNotPresent
+                                      - Never
                                     type: string
                                   name:
                                     description: Container name.
@@ -1798,6 +1843,10 @@ spec:
                                     description: Image pull policy. Default value
                                       is `Always` for `nightly`, `next` or `latest`
                                       images, and `IfNotPresent` in other cases.
+                                    enum:
+                                      - Always
+                                      - IfNotPresent
+                                      - Never
                                     type: string
                                   name:
                                     description: Container name.
@@ -1931,10 +1980,10 @@ spec:
                             nodeSelector:
                               type: string
                           type: object
-                      required:
-                        - enable
                       type: object
                     metrics:
+                      default:
+                        enable: true
                       description: Che server metrics configuration.
                       properties:
                         enable:
@@ -1963,6 +2012,10 @@ spec:
                                     description: Image pull policy. Default value
                                       is `Always` for `nightly`, `next` or `latest`
                                       images, and `IfNotPresent` in other cases.
+                                    enum:
+                                      - Always
+                                      - IfNotPresent
+                                      - Never
                                     type: string
                                   name:
                                     description: Container name.
@@ -2067,16 +2120,25 @@ spec:
                       type: string
                   type: object
                 devEnvironments:
+                  default:
+                    defaultNamespace:
+                      template: <username>-che
+                    storage:
+                      pvcStrategy: common
                   description: Development environment default configuration options.
                   properties:
                     defaultNamespace:
+                      default:
+                        template: <username>-che
                       description: User's default namespace.
                       properties:
                         template:
+                          default: <username>-che
                           description: If you don't create the user namespaces in
                             advance, this field defines the Kubernetes namespace created
-                            when you start your first workspace. You can use `<username>`,
-                            `<userid>` and `<workspaceid>` placeholders, such as che-workspace-<username>.
+                            when you start your first workspace. You can use `<username>`
+                            and `<userid>` placeholders, such as che-workspace-<username>.
+                          pattern: <username>|<userid>
                           type: string
                       type: object
                     defaultPlugins:
@@ -2101,6 +2163,8 @@ spec:
                         the workspace pods.
                       type: object
                     storage:
+                      default:
+                        pvcStrategy: common
                       description: Workspaces persistent storage.
                       properties:
                         pvc:
@@ -2122,6 +2186,9 @@ spec:
                           description: Persistent volume claim strategy for the Che
                             server. Only the `common` strategy (all workspaces PVCs
                             in one volume) is supported . For details, see https://github.com/eclipse/che/issues/21185.
+                          enum:
+                            - common
+                            - per-workspace
                           type: string
                       type: object
                     tolerations:
@@ -2180,6 +2247,12 @@ spec:
                       type: object
                   type: object
                 networking:
+                  default:
+                    auth:
+                      gateway:
+                        configLabels:
+                          app: che
+                          component: che-gateway-config
                   description: Networking, Che authentication, and TLS configuration.
                   properties:
                     annotations:
@@ -2191,15 +2264,27 @@ spec:
                         "3600",     nginx.ingress.kubernetes.io/ssl-redirect:          "true"'
                       type: object
                     auth:
+                      default:
+                        gateway:
+                          configLabels:
+                            app: che
+                            component: che-gateway-config
                       description: Authentication settings.
                       properties:
                         gateway:
+                          default:
+                            configLabels:
+                              app: che
+                              component: che-gateway-config
                           description: Gateway settings.
                           properties:
                             configLabels:
                               additionalProperties:
                                 type: string
-                              description: Gate configuration labels.
+                              default:
+                                app: che
+                                component: che-gateway-config
+                              description: Gateway configuration labels.
                               type: object
                             deployment:
                               description: 'Deployment override options. Since gateway
@@ -2222,6 +2307,10 @@ spec:
                                         description: Image pull policy. Default value
                                           is `Always` for `nightly`, `next` or `latest`
                                           images, and `IfNotPresent` in other cases.
+                                        enum:
+                                          - Always
+                                          - IfNotPresent
+                                          - Never
                                         type: string
                                       name:
                                         description: Container name.
