--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -1244,9 +1244,26 @@ spec:
             description: Desired configuration of Eclipse Che installation.
             properties:
               components:
+                default:
+                  cheServer:
+                    debug: false
+                    logLevel: INFO
+                  database:
+                    credentialsSecretName: postgres-credentials
+                    externalDb: false
+                    postgresDb: dbche
+                    postgresHostName: postgres
+                    postgresPort: "5432"
+                    pvc:
+                      claimSize: 1Gi
+                  metrics:
+                    enable: true
                 description: Che components configuration.
                 properties:
                   cheServer:
+                    default:
+                      debug: false
+                      logLevel: INFO
                     description: General configuration settings related to the Che
                       server.
                     properties:
@@ -1262,6 +1279,7 @@ spec:
                           type: string
                         type: array
                       debug:
+                        default: false
                         description: Enables the debug mode for Che server.
                         type: boolean
                       deployment:
@@ -1281,6 +1299,10 @@ spec:
                                   description: Image pull policy. Default value is
                                     `Always` for `nightly`, `next` or `latest` images,
                                     and `IfNotPresent` in other cases.
+                                  enum:
+                                  - Always
+                                  - IfNotPresent
+                                  - Never
                                   type: string
                                 name:
                                   description: Container name.
@@ -1425,6 +1447,10 @@ spec:
                                   description: Image pull policy. Default value is
                                     `Always` for `nightly`, `next` or `latest` images,
                                     and `IfNotPresent` in other cases.
+                                  enum:
+                                  - Always
+                                  - IfNotPresent
+                                  - Never
                                   type: string
                                 name:
                                   description: Container name.
@@ -1504,6 +1530,14 @@ spec:
                         type: object
                     type: object
                   database:
+                    default:
+                      credentialsSecretName: postgres-credentials
+                      externalDb: false
+                      postgresDb: dbche
+                      postgresHostName: postgres
+                      postgresPort: "5432"
+                      pvc:
+                        claimSize: 1Gi
                     description: Configuration settings related to the database used
                       by the Che installation.
                     properties:
@@ -1531,6 +1565,10 @@ spec:
                                   description: Image pull policy. Default value is
                                     `Always` for `nightly`, `next` or `latest` images,
                                     and `IfNotPresent` in other cases.
+                                  enum:
+                                  - Always
+                                  - IfNotPresent
+                                  - Never
                                   type: string
                                 name:
                                   description: Container name.
@@ -1599,6 +1637,7 @@ spec:
                             type: object
                         type: object
                       externalDb:
+                        default: false
                         description: Instructs the Operator to deploy a dedicated
                           database. By default, a dedicated PostgreSQL database is
                           deployed as part of the Che installation. When `externalDb`
@@ -1624,6 +1663,8 @@ spec:
                           See field `externalDb`.
                         type: string
                       pvc:
+                        default:
+                          claimSize: 1Gi
                         description: PVC settings for PostgreSQL database.
                         properties:
                           claimSize:
@@ -1658,6 +1699,10 @@ spec:
                                   description: Image pull policy. Default value is
                                     `Always` for `nightly`, `next` or `latest` images,
                                     and `IfNotPresent` in other cases.
+                                  enum:
+                                  - Always
+                                  - IfNotPresent
+                                  - Never
                                   type: string
                                 name:
                                   description: Container name.
@@ -1751,6 +1796,10 @@ spec:
                                   description: Image pull policy. Default value is
                                     `Always` for `nightly`, `next` or `latest` images,
                                     and `IfNotPresent` in other cases.
+                                  enum:
+                                  - Always
+                                  - IfNotPresent
+                                  - Never
                                   type: string
                                 name:
                                   description: Container name.
@@ -1882,10 +1931,10 @@ spec:
                           nodeSelector:
                             type: string
                         type: object
-                    required:
-                    - enable
                     type: object
                   metrics:
+                    default:
+                      enable: true
                     description: Che server metrics configuration.
                     properties:
                       enable:
@@ -1914,6 +1963,10 @@ spec:
                                   description: Image pull policy. Default value is
                                     `Always` for `nightly`, `next` or `latest` images,
                                     and `IfNotPresent` in other cases.
+                                  enum:
+                                  - Always
+                                  - IfNotPresent
+                                  - Never
                                   type: string
                                 name:
                                   description: Container name.
@@ -2016,16 +2069,25 @@ spec:
                     type: string
                 type: object
               devEnvironments:
+                default:
+                  defaultNamespace:
+                    template: <username>-che
+                  storage:
+                    pvcStrategy: common
                 description: Development environment default configuration options.
                 properties:
                   defaultNamespace:
+                    default:
+                      template: <username>-che
                     description: User's default namespace.
                     properties:
                       template:
+                        default: <username>-che
                         description: If you don't create the user namespaces in advance,
                           this field defines the Kubernetes namespace created when
-                          you start your first workspace. You can use `<username>`,
-                          `<userid>` and `<workspaceid>` placeholders, such as che-workspace-<username>.
+                          you start your first workspace. You can use `<username>`
+                          and `<userid>` placeholders, such as che-workspace-<username>.
+                        pattern: <username>|<userid>
                         type: string
                     type: object
                   defaultPlugins:
@@ -2049,6 +2111,8 @@ spec:
                       workspace pods.
                     type: object
                   storage:
+                    default:
+                      pvcStrategy: common
                     description: Workspaces persistent storage.
                     properties:
                       pvc:
@@ -2070,6 +2134,9 @@ spec:
                         description: Persistent volume claim strategy for the Che
                           server. Only the `common` strategy (all workspaces PVCs
                           in one volume) is supported . For details, see https://github.com/eclipse/che/issues/21185.
+                        enum:
+                        - common
+                        - per-workspace
                         type: string
                     type: object
                   tolerations:
@@ -2127,6 +2194,12 @@ spec:
                     type: object
                 type: object
               networking:
+                default:
+                  auth:
+                    gateway:
+                      configLabels:
+                        app: che
+                        component: che-gateway-config
                 description: Networking, Che authentication, and TLS configuration.
                 properties:
                   annotations:
@@ -2138,15 +2211,27 @@ spec:
                       "3600",     nginx.ingress.kubernetes.io/ssl-redirect:          "true"'
                     type: object
                   auth:
+                    default:
+                      gateway:
+                        configLabels:
+                          app: che
+                          component: che-gateway-config
                     description: Authentication settings.
                     properties:
                       gateway:
+                        default:
+                          configLabels:
+                            app: che
+                            component: che-gateway-config
                         description: Gateway settings.
                         properties:
                           configLabels:
                             additionalProperties:
                               type: string
-                            description: Gate configuration labels.
+                            default:
+                              app: che
+                              component: che-gateway-config
+                            description: Gateway configuration labels.
                             type: object
                           deployment:
                             description: 'Deployment override options. Since gateway
@@ -2168,6 +2253,10 @@ spec:
                                       description: Image pull policy. Default value
                                         is `Always` for `nightly`, `next` or `latest`
                                         images, and `IfNotPresent` in other cases.
+                                      enum:
+                                      - Always
+                                      - IfNotPresent
+                                      - Never
                                       type: string
                                     name:
                                       description: Container name.
