--- a/.ci/openshift-ci/Dockerfile
+++ b/.ci/openshift-ci/Dockerfile
@@ -17,11 +17,9 @@ FROM registry.ci.openshift.org/openshift/release:golang-1.16
 SHELL ["/bin/bash", "-c"]
 
 # Install yq, kubectl, chectl cli.
-RUN yum install --assumeyes -d1 python3-pip  httpd-tools && \
+RUN yum install --assumeyes -d1 python3-pip  httpd-tools nodejs && \
     pip3 install --upgrade setuptools && \
     pip3 install yq && \
-    pip3 install operator-courier==2.1.7 && \
-    pip3 install pysemver && \
     curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl && \
     chmod +x ./kubectl && \
     mv ./kubectl /usr/local/bin && \
